--- a/caterfind-backend/.gitignore
+++ b/caterfind-backend/.gitignore
@@ -36,3 +36,10 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+### Credentials - IMPORTANT! ###
+# Never commit files with real credentials
+**/application-local.properties
+**/application-dev.properties
+**/application-prod.properties
+*.env
