--- a/caterfind-backend/src/main/resources/application.properties
+++ b/caterfind-backend/src/main/resources/application.properties
@@ -40,6 +40,8 @@ spring.jpa.properties.hibernate.format_sql=true
 twilio.accountSid=YOUR_TWILIO_ACCOUNT_SID
 twilio.authToken=YOUR_TWILIO_AUTH_TOKEN
 twilio.phoneNumber=YOUR_TWILIO_PHONE_NUMBER
+# Public URL for Twilio Webhooks (ngrok)
+twilio.callbackUrl=https://unjudicable-preceding-desmond.ngrok-free.dev
 
 # ============================================================
 # EMAIL CONFIGURATION (Gmail SMTP)
