changes in application properties

--- a/caterfind-backend/src/main/resources/application.properties
+++ b/caterfind-backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.profiles.active=local
 # DATABASE CONFIGURATION
 # ============================================================
 # MySQL database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/caterfind?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/Caterfind1?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -28,8 +28,9 @@ spring.jpa.properties.hibernate.format_sql=true
 # ============================================================
 # Temporarily disabled - Hibernate will auto-create tables
 # Uncomment these lines after first successful run if you want to use schema.sql
-# spring.sql.init.mode=always
-# spring.sql.init.continue-on-error=true
+spring.sql.init.mode=always
+spring.sql.init.continue-on-error=true
+spring.sql.init.data-locations=classpath:init-data.sql
 
 # ============================================================
 # TWILIO CONFIGURATION FOR SMS
@@ -50,8 +51,8 @@ twilio.phoneNumber=YOUR_TWILIO_PHONE_NUMBER
 # For local development, use application-local.properties (see README.md)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email@gmail.com
-spring.mail.password=your-app-password
+spring.mail.username=changelavedant04@gmail.com
+spring.mail.password=xvkdhbtyytuosonr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
