client side home page

--- a/caterfind-backend/src/main/resources/application.properties
+++ b/caterfind-backend/src/main/resources/application.properties
@@ -44,6 +44,23 @@ twilio.phoneNumber=YOUR_TWILIO_PHONE_NUMBER
 twilio.callbackUrl=https://unmannishly-unmusicianly-chieko.ngrok-free.dev
 
 # ============================================================
+# CALLING CONFIGURATION
+# ============================================================
+# Provider options: twilio, exotel
+app.calling.provider=twilio
+
+# ============================================================
+# EXOTEL CONFIGURATION
+# ============================================================
+# Dashboard: https://my.exotel.com/
+exotel.sid=YOUR_EXOTEL_SID
+exotel.token=YOUR_EXOTEL_TOKEN
+exotel.subdomain=api
+exotel.callerId=YOUR_EXOTEL_VIRTUAL_NUMBER
+# Optional: ID of the applet to connect the customer to
+exotel.appletId=
+
+# ============================================================
 # EMAIL CONFIGURATION (Gmail SMTP)
 # ============================================================
 # IMPORTANT: Replace these with your own Gmail credentials
