feat: add self-hosted file upload

--- a/caterfind-backend/.gitignore
+++ b/caterfind-backend/.gitignore
@@ -43,3 +43,8 @@ build/
 **/application-dev.properties
 **/application-prod.properties
 *.env
+
+### File Uploads ###
+# Don't commit uploaded files
+uploads/
+uploads/**
