--- a/caterfind-backend/src/main/resources/application.properties
+++ b/caterfind-backend/src/main/resources/application.properties
@@ -74,3 +74,16 @@ spring.mail.password=YOUR_GMAIL_APP_PASSWORD
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+# ============================================================
+# FILE UPLOAD CONFIGURATION
+# ============================================================
+# Directory where uploaded files will be stored
+file.upload-dir=uploads/images
+
+# Maximum file size (10MB)
+spring.servlet.multipart.max-file-size=10MB
+# Maximum request size (10MB)
+spring.servlet.multipart.max-request-size=10MB
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
