feat:availability calendar with events details on caterer side and  simple availability calendar on client view

--- a/caterfind-backend/src/main/resources/application.properties
+++ b/caterfind-backend/src/main/resources/application.properties
@@ -87,3 +87,14 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
+
+# ============================================================
+# CALENDAR EVENT CLEANUP CONFIGURATION
+# ============================================================
+# Enable/disable automatic cleanup of old calendar events
+calendar.cleanup.enabled=true
+# Retention period in days (events older than this will be deleted)
+calendar.cleanup.retention.days=30
+# Cron expression for cleanup schedule (default: 2:00 AM daily)
+# Format: second minute hour day month weekday
+calendar.cleanup.cron=0 0 2 * * ?
